tests/syntax_error/c_cast_byte.jou
def foo() -> None:
    x = (byte)123  # Error: Jou's cast syntax is 'value as byte', not '(byte)value'
